RESOLVED FIXED152851
FTL B3 JS calls should do exceptions
https://bugs.webkit.org/show_bug.cgi?id=152851
Summary FTL B3 JS calls should do exceptions
Filip Pizlo
Reported 2016-01-07 13:30:03 PST
Patch forthcoming.
Attachments
probably ok (24.12 KB, patch)
2016-01-07 14:56 PST, Filip Pizlo
no flags
the patch (25.85 KB, patch)
2016-01-07 15:28 PST, Filip Pizlo
ggaren: review+
Filip Pizlo
Comment 1 2016-01-07 14:56:52 PST
Created attachment 268497 [details] probably ok
Filip Pizlo
Comment 2 2016-01-07 15:28:36 PST
Created attachment 268501 [details] the patch
Geoffrey Garen
Comment 3 2016-01-07 15:38:06 PST
Comment on attachment 268501 [details] the patch r=me
Filip Pizlo
Comment 4 2016-01-07 15:47:58 PST
Note You need to log in before you can comment on or make changes to this bug.